[gd_scene load_steps=4 format=3 uid="uid://c02d0whhroxwi"]

[ext_resource type="Texture2D" uid="uid://hcb18r3dw050" path="res://Square.png" id="1_ftaoa"]
[ext_resource type="Script" path="res://Enemy.gd" id="2_xgi8k"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hgura"]
size = Vector2(16, 16)

[node name="Enemy" type="Sprite2D"]
modulate = Color(0.415686, 0, 0, 1)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_ftaoa")
script = ExtResource("2_xgi8k")

[node name="Hitbox" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -2.38419e-07)
shape = SubResource("RectangleShape2D_hgura")

[node name="Stun_timer" type="Timer" parent="."]
wait_time = 0.085

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Stun_timer" to="." method="_on_timer_timeout"]
